force-app/main/default/objects/ProductSensitivityFields__c/ProductSensitivityFields__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Product Sensitivity fields on accounts and contacts. Used primarily to show the sensitivity of referral sources.</description>
    <label>Product Sensitivity Fields</label>
</CustomObject>