force-app/main/default/objects/ProductSensitivityFields__c/fields/AccountRollupField__c.field-meta.xml
<CustomField>
    <fullName>AccountRollupField__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>If this sensitivity rolls up to a field on the account, this is the name of the account field</inlineHelpText>
    <label>Account Rollup Field</label>
    <length>40</length>
    <type>Text</type>
</CustomField>