force-app/main/default/objects/ProductSensitivityFields__c/fields/APS__c.field-meta.xml
<CustomField>
    <fullName>APS__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this field on the Account Product Sensitivity Object?</description>
    <inlineHelpText>Is this field on the Account Product Sensitivity Object?</inlineHelpText>
    <label>AcctProductSens?</label>
    <type>Checkbox</type>
</CustomField>