force-app/main/default/objects/ProductSensitivityFields__c/fields/FieldName__c.field-meta.xml
<CustomField>
    <fullName>FieldName__c</fullName>
    <description>This is because of the size limit on the name field.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The API field name of the sensitivity field</inlineHelpText>
    <label>Field Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>