force-app/main/default/objects/ProductSensitivityFields__c/fields/Label__c.field-meta.xml
<CustomField>
    <fullName>Label__c</fullName>
    <description>label will be displayed to the user regarding sensitivity</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Label</label>
    <length>20</length>
    <type>Text</type>
</CustomField>