force-app/main/default/objects/ProductSensitivityFields__c/fields/OnContact__c.field-meta.xml
<CustomField>
    <fullName>OnContact__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is this sensitivity on the contact?</inlineHelpText>
    <label>Contact?</label>
    <type>Checkbox</type>
</CustomField>