force-app/main/default/objects/ProductSensitivityFields__c/fields/RefAcct__c.field-meta.xml
<CustomField>
    <fullName>RefAcct__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is this field on the Referral Account?</inlineHelpText>
    <label>RefAcct?</label>
    <type>Checkbox</type>
</CustomField>