force-app/main/default/objects/ProductSensitivityFields__c/fields/RefCtct__c.field-meta.xml
<CustomField>
    <fullName>RefCtct__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is this field on the Referral Contact?</inlineHelpText>
    <label>RefCtct?</label>
    <type>Checkbox</type>
</CustomField>